Increase specificity to make sure p stays visible

--- a/assets/src/blocks/Educationcovers/scss/educationcovers.scss
+++ b/assets/src/blocks/Educationcovers/scss/educationcovers.scss
@@ -10,7 +10,7 @@
   }
 }
 
-.cover-card .educationcovers__card__p {
+.cover-card > p.educationcovers__card__p {
   display: block;
   position: absolute;
   bottom: 0;
@@ -21,6 +21,6 @@
   padding-bottom: 1.6rem;
 
   &:hover {
-    color: $white;
+    display: block;
   }
 }
